
* SOLR-9698: Fix start/stop wait time and RMI_PORT on Windows (Colvin Cowie)

* SOLR-16653: Shard split on PRS collections with NRT + PULL replicas lead to down replicas (Hitesh Khamesra via noble)

* SOLR-16670: Fix directory/file check in S3Repository (Houston Putman, Hakan Özler)

* SOLR-16668: Use default to Java SSL for Http2SolrClient when none is provided (Houston Putman)

Build
---------------------
* Upgrade forbiddenapis to 3.4 (Uwe Schindler)

* SOLR-16432: Upgrade the gradle wrapper to 7.5.1 (Shawn Heisey, Kevin Risden)

* SOLR-16476: Remove commons-text dependency from solr-core (Kevin Risden)

* SOLR-16442: Upgrade to Lucene 9.4.2 (Christine Poerschke)

* SOLR-16508: Upgrade gradle wrapper to 7.6 (Kevin Risden)

* SOLR-16578: Upgrade to errorprone 2.16 (Kevin Risden)

* SOLR-16581: Upgrade OWASP dependency check to 7.4.1 (Kevin Risden)

* SOLR-16624: Remove Gradle Groovy version override (Kevin Risden)

* SOLR-16625: Upgrade OWASP dependency check to 8.0.1 (Kevin Risden)

* SOLR-16641: Generate gradle.properties from gradlew, if absent (Colvin Cowie)

Other Changes
---------------------
* SOLR-16545: Upgrade Carrot2 to 4.5.0 (Dawid Weiss)

* SOLR-16150: Embedded ZK Server used for zkRun should advertise itself on specific bound interfaces instead of
  generically on localhost. (Mike Drob)

* SOLR-16481: Upgrade Bats to 1.8.0 (Kevin Risden)

* SOLR-16467: Upgrade semver4j to 2.2.0 to fix failures with some locales (Kevin Risden)

* SOLR-15718: Remove backcompat feature solr.useUnsafeOverseerResponse (janhoy)

* SOLR-16529: Upgrade jaeger-client to 1.8.1 (janhoy)

* SOLR-16541: Eliminate the 'numShards' system property (noble)

* SOLR-15861: ConcurrentUpdateSolrClient should work with ManagedExecutorService (Sammy Chu, Kevin Risden)

* SOLR-16575: splitshard should honour createNodeSet (noble)

* SOLR-16579: Upgrade Jackson to 2.14.1 (Kevin Risden)

* SOLR-16562: Upgrade to Caffeine 3.1.2 (Kevin Risden)
