@@ -76,6 +76,10 @@ This is an improvement to the binary release artifact, but Jetty does not allow 
 The `server/contexts/solr-jetty-context.xml` now explicitly removes these restrictions, allowing Solr to share these "server" jars which now live in `server/lib/ext`.
 * The "Transient Cores" feature is now deprecated.
 
+=== SSL Configuration
+* When using Solr (or SolrJ) with an SSL-enabled Solr cluster using HTTP2, the default `-Dsolr.ssl.checkPeerName` value is now *true*.
+This is what has been documented in xref:deployment-guide:enabling-ssl.adoc#start-solrcloud[Enabling SSL], and matches the functionality of the original `HttpSolrClient`.
+
 === Tracing
 * A new `opentelemetry` module is added, with support for OTEL tracing in `OTLP` format using gRPC.
   At the same time, the `jaegertracer-configurator` module is deprecated for removal in Solr 10.
